# permutandis

./: .gitignore  README.md  requirements.txt  setup.py
cpp_solver/: CMakeLists.txt
cpp_solver/include/: env.hpp  mcts.hpp  state.hpp
cpp_solver/src/: env.cpp  solver.cpp  test.cpp
permutandis/evaluation/: rearrange_evaluation.py
permutandis/examples/: evaluate_solvers.py  solve_random_problems.py
permutandis/solvers/: baseline.py  mcts.py
permutandis/utils/: collisions.py  errors.py  problem.py  state_sampler.py
